# qr-code

./: .gitignore  pyproject.toml
application/: __init__.py  main.py  version.txt
application/controllers/: actions.py  appbar.py
application/view/: pages.py  router.py
tests/: conftest.py
